--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ cow_arc = "0.2.2"
 async-trait = "0.1.48"
 serde_json = "1.0.64"
 derive_more = "0.99.13"
+url = "2.2.1"
 serde = {version = "1.0.125", features = ["derive"]}
 reqwest = {version = "0.11.2", features = ["json", "rustls-tls"]}
 
