--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ serde_json = "1.0.64"
 derive_more = "0.99.13"
 url = "2.2.1"
 serde = {version = "1.0.125", features = ["derive"]}
-reqwest = {version = "0.11.2", features = ["json", "rustls-tls"]}
+reqwest = {version = "0.11.2", default-features = false, features = ["json", "rustls-tls"]}
 
 [dev-dependencies]
 tokio = {version = "1.4.0", features = ["full"]}
